@@ -89,6 +89,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: add -version option on command line (IVY-1014)
 - IMPROVEMENT: support resolve refresh in command line (IVY-1013)
 - IMPROVEMENT: Error message is not clear when specifying an invalid value for checksums (IVY-977)
+- IMPROVEMENT: catch AccessControlException on System.getProperties() (IVY-1015)
 
 - FIX: TTL does not work as expected (IVY-1012)
 - FIX: Listing of URL's under a given URL does not handle fully specified URL's (IVY-959) (thanks to Randy Nott)
